objects/LLC_BI__Lien__c.object
<CustomObject>
    <description>This exists on a piece of Collateral when it is currently pledged against a Loan.</description>
    <fields>
        <fullName>LLC_BI__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If the lien is active it will be used in current and prior lien calculations.</description>
        <inlineHelpText>If the lien is active it will be used in current and prior lien calculations</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount__c</fullName>
        <description>This is a user updated field. The lien amount against a piece of collateral.</description>
        <inlineHelpText>The lien amount against a piece of collateral.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral__c</fullName>
        <description>This field is required and is a lookup to the collateral that is part of the Lien. When a loan is booked, the automatic lien creation will link it to the pledged collateral. This can also be manually populated.</description>
        <label>Collateral</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Liens</relationshipLabel>
        <relationshipName>Liens</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expire_Date__c</fullName>
        <description>This is a user updated field. The date the lien has been paid out.</description>
        <inlineHelpText>The date the lien has been paid out.</inlineHelpText>
        <label>Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Institution__c</fullName>
        <description>This is a user updated field. The institution that has the lien against the piece of collateral.</description>
        <inlineHelpText>The institution that has the lien against the piece of collateral.</inlineHelpText>
        <label>Institution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Created_From_Collateral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically calculated. Is the lien automatically created from collateral on a booked loan.</description>
        <inlineHelpText>Is the lien automatically created from collateral on a booked loan?</inlineHelpText>
        <label>Is Created From Collateral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is populated via apex to exclude this lien from calculations.</description>
        <inlineHelpText>This field is populated via apex to exclude this lien from calculations.</inlineHelpText>
        <label>Is Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Internal__c</fullName>
        <description>This field is auto-populated and indicates if the lien was created in the system by the booking of a loan.</description>
        <formula>LLC_BI__Loan__c != NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is_Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Number__c</fullName>
        <description>This field is manually populated. This is the Loan Number for the Loan the Lien looks up to.</description>
        <formula>LLC_BI__Loan__r.LLC_BI__lookupKey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically calculated. The loan that this lien is tied to, if the lien is within this financial institution.</description>
        <inlineHelpText>The loan that this lien is tied to, if the lien is within this financial institution.</inlineHelpText>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Liens</relationshipLabel>
        <relationshipName>Liens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Position__c</fullName>
        <description>This is a user updated field. The order in which liens will be repaid when the property is transferred to a new owner.</description>
        <inlineHelpText>The order in which liens will be repaid when the property is transferred to a new owner.</inlineHelpText>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Acquired_With_Loan_Or_Project_Proceeds__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the asset was acquired with Loan Or Project Proceeds. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates if the asset was acquired with Loan Or Project Proceeds. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Acquired With Loan Or Project Proceeds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Amount_Owed_To_Seller_Under_Contract__c</fullName>
        <description>Amount owed to seller under contract. Use this field only for liens on Purchaser or Seller Interest in Land Contract of Sale. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Amount owed to seller under contract. Use this field only for liens on Purchaser or Seller Interest in Land Contract of Sale. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Amount Owed To Seller Under Contract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Close_Prior_Open_Ended_Liens__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if any prior lien(s) that is (are) open ended as to future advances must be closed, in writing, according to applicable state law. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Check if any prior lien(s) that is (are) open ended as to future advances must be closed, in writing, according to applicable state law. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Close Prior Open Ended Liens</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Date_Of_Lease__c</fullName>
        <description>Date Of Lease. Use this field only for liens on Lessee&apos;s Interest in a Lease by Assignment. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Date Of Lease. Use this field only for liens on Lessee&apos;s Interest in a Lease by Assignment. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Date Of Lease</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Evidence_Of_Title_And_Lien_Priority_OO__c</fullName>
        <description>Evidence Of Title And Lien Priority Open Options. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Evidence Of Title And Lien Priority Open Options. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Evidence Of Title And Lien Priority OO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Evidence_Of_Title_And_Priority_Of_Lien__c</fullName>
        <description>Evidence Of Title And Priority Of Lien options. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Evidence Of Title And Priority Of Lien options. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Evidence Of Title And Priority Of Lien</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALTA Loan Policy</fullName>
                </value>
                <value>
                    <fullName>Mortgagee’s Title Policy</fullName>
                </value>
                <value>
                    <fullName>Attorney’s certificate of title</fullName>
                </value>
                <value>
                    <fullName>Title insurance customarily obtained for similar transactions in this jurisdiction</fullName>
                </value>
                <value>
                    <fullName>Title and/or Lien Search</fullName>
                </value>
                <value>
                    <fullName>CLTA Loan Policy</fullName>
                </value>
                <value>
                    <fullName>Limited Title Policy</fullName>
                </value>
                <value>
                    <fullName>Property, Judgment and Lien Report indicating that lender has obtained the required position</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Evidence_Of_Title_Open_Option__c</fullName>
        <description>List any Evidence Of Title Open Options here. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>List any Evidence Of Title Open Options here. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Evidence Of Title Open Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Filing_Request_For_Notice_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether filing request for notice is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates whether filing request for notice is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Filing Request For Notice Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Guaranteed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Use this field if entity guaranteeing the loan is securing its guarantee with this lien. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Use this field if entity guaranteeing the loan is securing its guarantee with this lien. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Guaranteed By</label>
        <referenceTo>LLC_BI__Legal_Entities__c</referenceTo>
        <relationshipName>LegalEntity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nSBA__Include_Assignment_Of_Rents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that Assignment Of Rents on land and improvements are included in the lien. Use this field only if selected Realty And Leaseholds option is Lien on Land and Improvements. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates that Assignment Of Rents on land and improvements are included in the lien. Use this field only if selected Realty And Leaseholds option is Lien on Land and Improvements. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Include Assignment Of Rents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Include_Water_Rights__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that Water Rights are included in the lien. Use this field only if selected Realty And Leaseholds option is Lien on Land and Improvements. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates that Water Rights are included in the lien. Use this field only if selected Realty And Leaseholds option is Lien on Land and Improvements. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Include Water Rights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Instrument__c</fullName>
        <description>Select state specific instrument. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Select state specific instrument. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Instrument</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>Deed of Trust</fullName>
                </value>
                <value>
                    <fullName>Deed to Secure Debt</fullName>
                </value>
                <value>
                    <fullName>Indemnity Deed</fullName>
                </value>
                <value>
                    <fullName>Montana Trust Indenture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Is_Any_Prior_Lien_Open_Ended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If there are any prior liens on this collateral, set this field if any prior lien is Open Ended. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>If there are any prior liens on this collateral, set this field if any prior lien is Open Ended. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Is Any Prior Lien Open Ended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Is_Financed_With_This_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>--DEPRECATED--</description>
        <inlineHelpText>Indicates whether lien is financed with this loan?</inlineHelpText>
        <label>--D Is Financed With This Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Is_Landlords_Waiver_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Landlords Waiver Required. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Is Landlords Waiver Required. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Is Landlords Waiver Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Is_Without_MGL_Section_21e__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Without MGL Section 21(e) is an ALTA or Mortgage Loan Policy option. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Is Without MGL Section 21(e) is an ALTA or Mortgage Loan Policy option. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Is Without MGL Section 21e</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Is_Without_Standard_Exceptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Without Standard Exceptions (extended ALTA) is an ALTA Loan Policy option. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Is Without Standard Exceptions (extended ALTA) is an ALTA Loan Policy option. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Is Without Standard Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Is_Without_Standard_Survey_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Without Standard Survey Exception is an ALTA Loan Policy option. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Is Without Standard Survey Exception is an ALTA Loan Policy option. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Is Without Standard Survey Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Land_Trust_Prior_Assignees_Amount__c</fullName>
        <description>Land trust prior assignees amount. Use this field only for liens on Assignment of Beneficial Interest and Power of Direction in Land Trust. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Land trust prior assignees amount. Use this field only for liens on Assignment of Beneficial Interest and Power of Direction in Land Trust. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Land Trust Prior Assignees Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Land_Trust_Prior_Assignees__c</fullName>
        <description>List prior assignees of Land trust. Use this field only for liens on Assignment of Beneficial Interest and Power of Direction in Land Trust. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>List prior assignees of Land trust. Use this field only for liens on Assignment of Beneficial Interest and Power of Direction in Land Trust. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Land Trust Prior Assignees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Land_Trust_Prior_Lienholders_Amount__c</fullName>
        <description>Land trust prior lienholders amount. Use this field only for liens on Assignment of Beneficial Interest and Power of Direction in Land Trust. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Land trust prior lienholders amount. Use this field only for liens on Assignment of Beneficial Interest and Power of Direction in Land Trust. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Land Trust Prior Lienholders Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Land_Trust_Prior_Lienholders__c</fullName>
        <description>Land trust prior lienholders. Use this field only for liens on Assignment of Beneficial Interest and Power of Direction in Land Trust. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Land trust prior lienholders. Use this field only for liens on Assignment of Beneficial Interest and Power of Direction in Land Trust. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Land Trust Prior Lienholders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Lease_Agreement_Termination_Notice_Days__c</fullName>
        <description>Number of days for Lessor to provide Lender/SBA written notice of intent to terminate the lease for Borrower’s default and an opportunity to cure. Use this field only for Lessees Interest type of liens. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Number of days for Lessor to provide Lender/SBA written notice of intent to terminate the lease for Borrower’s default and an opportunity to cure. Use this field only for Lessees Interest type of liens. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Lease Agreement Termination Notice Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSBA__Leasehold_Term_Of_Loan_Plus_Years__c</fullName>
        <description>Enter number of years if lease needs to be extended above the term of Loan. Use this field only for liens on leaseholds related to building on Leased Land. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Enter number of years if lease needs to be extended above the term of Loan. Use this field only for liens on leaseholds related to building on Leased Land. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Leasehold Term Of Loan Plus Years</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSBA__Lender_Must_Cause_Deed_To_Be_In_Escrow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether lender must cause deed to be in escrow. Use this field only for liens on Purchaser Interest in Land Contract of Sale. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates whether lender must cause deed to be in escrow. Use this field only for liens on Purchaser Interest in Land Contract of Sale. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Lender Must Cause Deed To Be In Escrow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Lessees_Interest_In_The_Lease_Lessee__c</fullName>
        <description>Lessee name. Use this field only for Lessee&apos;s Interest type of liens. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Lessee name. Use this field only for Lessee&apos;s Interest type of liens. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Lessees Interest In The Lease Lessee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Lessees_Interest_In_The_Lease_Lessor__c</fullName>
        <description>Lessor name. Use this field only for Lessee&apos;s Interest type of liens. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Lessor name. Use this field only for Lessee&apos;s Interest type of liens. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Lessees Interest In The Lease Lessor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Line_Of_Credit_Maximum_Amount__c</fullName>
        <description>Line Of Credit Maximum Amount. Use this field only for prior liens. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Line Of Credit Maximum Amount. Use this field only for prior liens. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Line Of Credit Maximum Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Line_Of_Credit_Present_Amount__c</fullName>
        <description>Line Of Credit Present Amount. Use this field for prior liens only. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Line Of Credit Present Amount. Use this field for prior liens only. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Line Of Credit Present Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Nature_Of_Interests_And_Amounts__c</fullName>
        <description>Describe Nature of interests and amounts. Use this field only for liens on Purchaser or Seller Interest in Land Contract of Sale. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Describe Nature of interests and amounts. Use this field only for liens on Purchaser or Seller Interest in Land Contract of Sale. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Nature Of Interests And Amounts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__No_Exceptions_For_Parties_In_Possession__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Mortgagee Title Policy must contain no exceptions for parties in possession. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Check if Mortgagee Title Policy must contain no exceptions for parties in possession. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>No Exceptions For Parties In Possession</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Notice_Before_Foreclosure_Agreement__c</fullName>
        <description>Lender must obtain a written agreement from prior lienholders to provide Lender with this number of days written notice before commencing foreclosure of prior lien. Use this field only for liens on real estate collateral types. Loan Authorization only.</description>
        <inlineHelpText>Lender must obtain a written agreement from prior lienholders to provide Lender with this number of days written notice before commencing foreclosure of prior lien. Use this field only for liens on real estate collateral types. Loan Authorization only.</inlineHelpText>
        <label>Notice Before Foreclosure Agreement</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSBA__Prior_Lienholders_Written_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether prior lienholders written verification is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates whether lienholders written verification is required. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Prior Lienholders Written Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Puerto_Rico_Chattel_Mortgage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true only if security interest in personal property is Puerto Rico Chattel Mortgage. This field is used in SBA Loan Authorization and E-Tran submissions starting with version 5.</description>
        <inlineHelpText>This field is set to true only if security interest in personal property is Puerto Rico Chattel Mortgage. This field is used in SBA Loan Authorization and E-Tran submissions starting with version 5.</inlineHelpText>
        <label>Puerto Rico Chattel Mortgage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Purchasers_Interest_Contract_Purchaser__c</fullName>
        <description>Purchaser name in Collateral Assignment of (or lien on) Purchaser’s Interest in Land Contract of Sale. Use this field only for liens on Purchaser or Seller Interest in Land Contract of Sale. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Purchaser name in Collateral Assignment of (or lien on) Purchaser’s Interest in Land Contract of Sale. Use this field only for liens on Purchaser or Seller Interest in Land Contract of Sale. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Purchasers Interest Contract Purchaser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Purchasers_Interest_Contract_Seller__c</fullName>
        <description>Seller name in Collateral Assignment of (or lien on) Purchaser’s Interest in Land Contract of Sale. Use this field only for liens on Purchaser or Seller Interest in Land Contract of Sale. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Seller name in Collateral Assignment of (or lien on) Purchaser’s Interest in Land Contract of Sale. Use this field only for liens on Purchaser or Seller Interest in Land Contract of Sale. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Purchasers Interest Contract Seller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Reality_And_Leaseholds_Option__c</fullName>
        <description>--DEPRECATED--</description>
        <label>-D Reality And Leaseholds Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lien On Land And Improvements</fullName>
                </value>
                <value>
                    <fullName>Collateral Assignment of (or lien on) Purchaser’s Interest in Land Contract of Sale</fullName>
                </value>
                <value>
                    <fullName>Collateral Assignment of (or lien on) Seller’s Interest in Land Contract of Sale</fullName>
                </value>
                <value>
                    <fullName>Assignment of Beneficial Interest and Power of Direction in Land Trust</fullName>
                </value>
                <value>
                    <fullName>Leasehold Instrument on Building Constructed on Leased Land</fullName>
                </value>
                <value>
                    <fullName>Leasehold Security Interest in building on leased land</fullName>
                </value>
                <value>
                    <fullName>Lessee’s Interest in a Lease by Assignment</fullName>
                </value>
                <value>
                    <fullName>Lessee’s Interest in a Lease by Lien, Mortgage or Deed of Trust</fullName>
                </value>
                <value>
                    <fullName>Leasehold on Tribal Land</fullName>
                </value>
                <value>
                    <fullName>Cooperative Apartment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Realty_And_Leaseholds_Option__c</fullName>
        <description>Realty And Leaseholds Options. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Realty And Leaseholds Options. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Realty And Leaseholds Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lien On Land And Improvements</fullName>
                </value>
                <value>
                    <fullName>Collateral Assignment of (or lien on) Purchaser’s Interest in Land Contract of Sale</fullName>
                </value>
                <value>
                    <fullName>Collateral Assignment of (or lien on) Seller’s Interest in Land Contract of Sale</fullName>
                </value>
                <value>
                    <fullName>Assignment of Beneficial Interest and Power of Direction in Land Trust</fullName>
                </value>
                <value>
                    <fullName>Leasehold Instrument on Building Constructed on Leased Land</fullName>
                </value>
                <value>
                    <fullName>Leasehold Security Interest in building on leased land</fullName>
                </value>
                <value>
                    <fullName>Lessee’s Interest in a Lease by Assignment</fullName>
                </value>
                <value>
                    <fullName>Lessee’s Interest in a Lease by Lien, Mortgage or Deed of Trust</fullName>
                </value>
                <value>
                    <fullName>Leasehold on Tribal Land</fullName>
                </value>
                <value>
                    <fullName>Cooperative Apartment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Required_Endorsements__c</fullName>
        <description>Required Endorsements is an ALTA Loan Policy option. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Required Endorsements is an ALTA Loan Policy option. Use this field only for liens on real estate collateral types. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Required Endorsements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Shared_Lien_With_Lenders_Non_SBA_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the lien is shared with Lenders non-SBA Loan. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Indicates if the lien is shared with Lenders non-SBA Loan. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Shared Lien With Lenders non-SBA Loan</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>